Fix minor layout bug

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -727,7 +727,7 @@ Print styles
 
 /* Collapsible tables
 -------------------------------------------------- */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .table-collapsible {
         border: 0;
     }
